CAMS-646: Fix icon spacing in table; remove redundant aria label on icons

--- a/user-interface/src/case-detail/panels/CaseDetailAssociatedCases.scss
+++ b/user-interface/src/case-detail/panels/CaseDetailAssociatedCases.scss
@@ -13,7 +13,7 @@
         vertical-align: middle;
 
         .raw-svg-icon {
-          margin-right: 0.5rem;
+          margin-right: 0.75rem;
           vertical-align: middle;
           display: inline-block;
         }
